# record

./: .gitignore  AutoScrollTextView.java  LICENSE  README.md
cashmaker/app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
cashmaker/app/release/: output.json
cashmaker/app/src/main/: AndroidManifest.xml
cashmaker/app/src/main/cpp/: DefData.h  andfix.cpp  getevent.h  hook.cpp  native-lib.cpp
cashmaker/app/src/main/cpp/art/: art_method_replace.cpp  art_method_replace_4_4.cpp  art_method_replace_5_0.cpp  art_method_replace_5_1.cpp  art_method_replace_6_0.cpp  art_method_replace_7_0.cpp
cashmaker/app/src/main/cpp/dalvik/: dalvik.h  dalvik_method_replace.cpp
cashmaker/app/src/main/java/: com_cashmaker_android_Shell.h  com_cashmaker_android_Shell_Key.h  com_cashmaker_android_act_InjectActivity.h
cashmaker/app/src/main/java/com/cashmaker/android/: App.java  HttpServer.java  IPCUitl.java  Input.java  JavaData.java  LogUitl.java  OutFormat.java  RestApi.java  RxSchedulers.java  Shell.java  TouchEventManager.java  TouchPoint.java  TouchScreenConfig.java  Version.java
cashmaker/app/src/main/java/com/cashmaker/android/act/: InjectActivity.java  MainActivity.java  SplashActivity.java
cashmaker/app/src/main/java/com/cashmaker/android/permission/: FloatWindowManager.java
cashmaker/app/src/main/java/com/cashmaker/android/permission/rom/: HuaweiUtils.java  MeizuUtils.java  MiuiUtils.java  QikuUtils.java  RomUtils.java
cashmaker/app/src/main/res/layout/: activity_main.xml  custom_drawerlayout.xml  custom_toolbar.xml  dialog.xml  inject_layout.xml  splash.xml
cashmaker/app/src/main/res/values/: strings.xml  styles.xml
cashmaker/gradle/wrapper/: gradle-wrapper.properties
